Chore: use openssl again

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -240,7 +240,6 @@ http_archive(
         'find . -type f \\( -name "*.h" -or -name "*.cpp" \\) -exec sed -i \'s/#include <glog\\([^>]*\\)>/#include "glog\\1"/g\' {} \\;',
     ],
     patches = [
-        "//bazel/third_party/folly:0001-fix-for-libressl.patch",
         "//bazel/third_party/folly:0002-fix-override-warning.patch",
     ],
     sha256 = "e4ff1467598f8a7bedf175489eb7dd270ab023e128f0aeef770eb5b087c4b4dd",
@@ -325,7 +324,6 @@ http_archive(
     name = "com_github_libevent_libevent",  # 2020-07-05T13:33:03Z
     build_file = "//bazel/third_party/event:event.BUILD",
     patch_cmds = [
-        "sed -i '43s/$/ \\&\\& LIBRESSL_VERSION_NUMBER < 0x3050000fL/' openssl-compat.h",
     ],
     sha256 = "92e6de1be9ec176428fd2367677e61ceffc2ee1cb119035037a27d346b0403bb",
     strip_prefix = "libevent-2.1.12-stable",
@@ -400,18 +398,15 @@ Set-Content protobuf.bzl -Value $content -Encoding UTF8
     urls = ["https://github.com/protocolbuffers/protobuf/archive/refs/tags/v3.19.1.tar.gz"],
 )
 
+# Too hard to use boringssl/libressl with facebook libraries.
 http_archive(
     name = "openssl",
-    build_file = "//bazel/third_party/libressl:libressl.BUILD",
-    patch_args = ["-p1"],
-    patches = [
-        "//bazel/third_party/libressl:0001-fix-attribute-directive-ignored-warning.patch",
-        "//bazel/third_party/libressl:0002-add-SSL_SESSION_get0_hostname.patch",
-    ],
-    sha256 = "a7d0026f67622275ec8f8239ded422a653d5ccc84df55dea2acd406017185608",
-    strip_prefix = "libressl-3.5.1",
+    build_file = "//bazel/third_party/openssl:openssl.BUILD",
+    sha256 = "40dceb51a4f6a5275bde0e6bf20ef4b91bfc32ed57c0552e2e8e15463372b17a",
+    strip_prefix = "openssl-1.1.1n",
     urls = [
-        "https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.5.1.tar.gz",
+        "https://www.openssl.org/source/openssl-1.1.1n.tar.gz",
+        "https://github.com/openssl/openssl/archive/OpenSSL_1_1_1m.tar.gz",
     ],
 )
 
