Chore: build with third_party/folly

--- a/one/codelab/folly_io_http/BUILD.bazel
+++ b/one/codelab/folly_io_http/BUILD.bazel
@@ -29,7 +29,7 @@ cc_binary(
     ],
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_facebook_folly//:folly",
+        "@//third_party/folly",
         "@com_github_gflags_gflags//:gflags",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/functional:bind_front",
