Chore: third_party/folly detect getrandom by glibc version

--- a/.gitignore
+++ b/.gitignore
@@ -435,6 +435,9 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,c++,java,bazel,linux,macos,maven,windows,intellij+all,visualstudiocode,python
 
+# Normal files
+!/bazel/build
+
 # Ignore generated clang.bazelrc file
 /clang.bazelrc
 
