--- a/bazel/config/BUILD.bazel
+++ b/bazel/config/BUILD.bazel
@@ -20,7 +20,7 @@ load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
 
 string_flag(
     name = "simd_level",
-    build_setting_default = "mmx",
+    build_setting_default = "sse2",
     values = [
         "mmx",
         "sse2",
