--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -68,6 +68,14 @@ RULES_FUZZING_TAG = "0.2.0"  # 2021-07-12T17:55:46Z
 
 RULES_FUZZING_SHA256 = "127d7c45e9b7520b3c42145b3cb1b8c26477cdaed0521b02a0298907339fefa1"
 
+# Replace with the LLVM commit you want to use.
+LLVM_COMMIT = "llvmorg-14.0.1"
+
+# The easiest way to calculate this for a new commit is to set it to empty and
+# then run a bazel build and it will report the digest necessary to cache the
+# archive and make the build reproducible.
+LLVM_SHA256 = "c8be00406e872c8a24f8571cf6f5517b73ae707104724b1fd1db2f0af9544019"
+
 #
 # Starlark libraries
 #
@@ -329,6 +337,36 @@ http_archive(
         "https://github.com/libevent/libevent/releases/download/release-2.1.12-stable/libevent-2.1.12-stable.tar.gz",
     ],
 )
+
+# TODO(zhangshuai.ustc): patch to leverage clangd CommandMangler.
+# https://github.com/llvm/llvm-project/blob/llvmorg-14.0.1/clang-tools-extra/clangd/CompileCommands.cpp
+http_archive(
+    name = "com_github_llvm_llvm_project",  # 2022-04-13T06:38:11Z
+    build_file_content = "# empty",
+    sha256 = LLVM_SHA256,
+    strip_prefix = "llvm-project-" + LLVM_COMMIT,
+    urls = ["https://github.com/llvm/llvm-project/archive/{commit}.tar.gz".format(commit = LLVM_COMMIT)],
+)
+
+load("@com_github_llvm_llvm_project//utils/bazel:configure.bzl", "llvm_configure")
+
+llvm_configure(
+    name = "llvm-project",
+    targets = [
+        "X86",
+    ],
+)
+
+load("@com_github_llvm_llvm_project//utils/bazel:zlib.bzl", "llvm_zlib_external")
+
+llvm_zlib_external(
+    name = "llvm_zlib",
+    external_zlib = "@com_github_madler_zlib//:zlib",
+)
+
+load("@com_github_llvm_llvm_project//utils/bazel:terminfo.bzl", "llvm_terminfo_disable")
+
+llvm_terminfo_disable(name = "llvm_terminfo")
 
 http_archive(
     name = "com_github_lz4_lz4",  # 2019-08-20
