--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,4 +38,4 @@ jobs:
       - run: echo "build --repository_cache=$HOME/.cache/bazel/repository_cache" >> .bazelrc
       - run: tools/setup_clang.sh /usr/lib/llvm-13
       - run: bazel build -c opt --config libc++ //...
-      - run: bazel test -c opt --config clang-asan //...
+      - run: bazel test -c opt --config clang-asan -- //... -//third_party/wangle:SSLContextManagerTest
