--- a/.gitignore
+++ b/.gitignore
@@ -435,6 +435,9 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,c++,java,bazel,linux,macos,maven,windows,intellij+all,visualstudiocode,python
 
+# Ignore CI pipeline output base
+/.bazel_output
+
 # Normal files
 !/bazel/build
 
