chore: pipeline build with BuildBuddy.

--- a/.bazelrc
+++ b/.bazelrc
@@ -196,3 +196,14 @@ build:msan-libfuzzer --@rules_fuzzing//fuzzing:cc_engine_instrumentation=libfuzz
 build:msan-libfuzzer --@rules_fuzzing//fuzzing:cc_engine_sanitizer=msan
 
 try-import %workspace%/clang.bazelrc
+
+# You need to put the API key in your ~/.bazelrc file or provide it from commandline.
+build:buildbuddy --bes_results_url=https://app.buildbuddy.io/invocation/
+build:buildbuddy --bes_backend=grpcs://remote.buildbuddy.io
+build:buildbuddy --remote_cache=grpcs://remote.buildbuddy.io
+build:buildbuddy --remote_timeout=3600
+build:buildbuddy --experimental_remote_cache_compression
+build:buildbuddy --remote_download_outputs=all
+
+build:buildbuddy-readonly --config=buildbuddy
+build:buildbuddy-readonly --noremote_upload_local_results
