--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -1,62 +1,58 @@
 jobs:
 - job: build
   timeoutInMinutes: 240
-  variables:
-    bazelDiskCacheDirectory: $(Build.StagingDirectory)/bazel/disk_cache
-    bazelRepositoryCacheDirectory: $(Build.StagingDirectory)/bazel/repository_cache
-    bazelOutputBaseDirectory: $(Build.StagingDirectory)/bazel/output_base
   steps:
   - checkout: self
     clean: true
-  - bash: mkdir -p $(bazelDiskCacheDirectory)
-    displayName: Make Bazel disk_cache directory
-  - bash: mkdir -p $(bazelRepositoryCacheDirectory)
-    displayName: Make Bazel repository_cache directory
-  - bash: mkdir -p $(bazelOutputBaseDirectory)
-    displayName: Make Bazel output_base directory
+  - task: AzureKeyVault@2
+    displayName: Get ApiKey from Azure KeyVault
+    inputs:
+      connectedServiceName: 'Isolated'
+      keyVaultName: 'shuaizhang-akv'
+      secretsFilter: 'BuildBuddyApiKey'
   - bash: tools/setup_clang.sh /usr/lib/llvm-14
     displayName: Setup for Bazel build with clang
   - script: >
       bazel
       --batch_cpu_scheduling
-      --output_base=$(bazelOutputBaseDirectory)
       build
-      --disk_cache=$(bazelDiskCacheDirectory)
-      --repository_cache=$(bazelRepositoryCacheDirectory)
       --noshow_loading_progress
       --show_progress_rate_limit=5
       --verbose_failures
+      --config=buildbuddy
+      --remote_header=x-buildbuddy-api-key=$(BuildBuddyApiKey)
+      --build_metadata=BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)
+      --build_metadata=COMMIT_SHA=$(git rev-parse HEAD)
+      --build_metadata=ROLE=CI
       --config=libc++
       //...
     displayName: Build project
 
 - job: test
   timeoutInMinutes: 240
-  variables:
-    bazelDiskCacheDirectory: $(Build.StagingDirectory)/bazel/disk_cache
-    bazelRepositoryCacheDirectory: $(Build.StagingDirectory)/bazel/repository_cache
-    bazelOutputBaseDirectory: $(Build.StagingDirectory)/bazel/output_base
   steps:
   - checkout: self
     clean: true
-  - bash: mkdir -p $(bazelDiskCacheDirectory)
-    displayName: Make Bazel disk_cache directory
-  - bash: mkdir -p $(bazelRepositoryCacheDirectory)
-    displayName: Make Bazel repository_cache directory
-  - bash: mkdir -p $(bazelOutputBaseDirectory)
-    displayName: Make Bazel output_base directory
+  - task: AzureKeyVault@2
+    displayName: Get ApiKey from Azure KeyVault
+    inputs:
+      connectedServiceName: 'Isolated'
+      keyVaultName: 'shuaizhang-akv'
+      secretsFilter: 'BuildBuddyApiKey'
   - bash: tools/setup_clang.sh /usr/lib/llvm-14
     displayName: Setup for Bazel build with clang
   - script: >
       bazel
       --batch_cpu_scheduling
-      --output_base=$(bazelOutputBaseDirectory)
       test
-      --disk_cache=$(bazelDiskCacheDirectory)
-      --repository_cache=$(bazelRepositoryCacheDirectory)
       --noshow_loading_progress
       --show_progress_rate_limit=5
       --verbose_failures
+      --config=buildbuddy
+      --remote_header=x-buildbuddy-api-key=$(BuildBuddyApiKey)
+      --build_metadata=BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)
+      --build_metadata=COMMIT_SHA=$(git rev-parse HEAD)
+      --build_metadata=ROLE=CI
       --compilation_mode opt
       --config=clang-asan
       --
