chore: pr.yml trigger ignore .vscode & tools/bazel-compdb.py.

--- a/.azure-pipelines/pr.yml
+++ b/.azure-pipelines/pr.yml
@@ -23,8 +23,9 @@ pr:
     - main
   paths:
     exclude:
+    - .vscode/**
     - docs/**
-    - tools/**
+    - tools/bazel-compdb.py
     - .clang-format
     - .clang-tidy
     - .editorconfig
